--- a/login.html
+++ b/login.html
@@ -820,7 +820,7 @@
       document.getElementById('popup-form').style.display = 'block';
     });
 
-    var closeButton = document.getElementsByClassName('close-button')[0];
+    var closeButton = document.getElementsByClassName('closse-button')[0];
     closeButton.addEventListener('click', function () {
       document.getElementById('popup-form').style.display = 'none';
     });
