--- a/login.html
+++ b/login.html
@@ -783,7 +783,7 @@
       document.getElementById('confirmation-messagee').textContent = confirmationMessage;
     });
 
-    
+    //poin
     document.getElementById('open-form-buttoon').addEventListener('click', function () {
       document.getElementById('popupp-form').style.display = 'block';
     });
@@ -817,10 +817,10 @@
     });
 
     document.getElementById('convert-button').addEventListener('click', function () {
-      document.getElementById('popup-form').style.display = 'block';
+      document.getElementById('popupp-form').style.display = 'block';
     });
 
-    var closeButton = document.getElementsByClassName('closse-button')[0];
+    var closeButton = document.getElementsByClassName('close-button')[0];
     closeButton.addEventListener('click', function () {
       document.getElementById('popup-form').style.display = 'none';
     });
