--- a/login.html
+++ b/login.html
@@ -84,7 +84,7 @@
               </a>
               <div id="popupp-form" class="popup">
                 <div class="popup-content">
-                  <span class="closse-button">&times;</span>
+                  <span class="close-buttoon">&times;</span>
                   <h2>Convert Coins to Cash</h2>
                   <form id="convert-form">
                     <label for="coins" style="color: #ffffff;">Number of Coins:</label><br>
@@ -820,7 +820,7 @@
       document.getElementById('popupp-form').style.display = 'block';
     });
 
-    var closeButton = document.getElementsByClassName('close-button')[0];
+    var closeButton = document.getElementsByClassName('close-buttoon')[0];
     closeButton.addEventListener('click', function () {
       document.getElementById('popup-form').style.display = 'none';
     });
