--- a/login.html
+++ b/login.html
@@ -822,7 +822,7 @@
 
     var closeButton = document.getElementsByClassName('close-buttonnnn')[0];
     closeButton.addEventListener('click', function () {
-      document.getElementById('popup-form').style.display = 'none';
+      document.getElementById('popupp-form').style.display = 'none';
     });
   </script>
 </body>
