--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <link rel="shortcut icon" href="images/favicon.png" type="">
+  <link rel="shortcut icon" href="images/logo.png" type="">
   <!-- icon -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <title> 5ABE_ONTI </title>
+  <title> barterIN </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -38,7 +38,9 @@
 
   <div class="hero_area">
     <div class="bg-box">
-      <img src="images/hero-bg.svg" alt="">
+      <video autoplay muted loop>
+        <source src="images/hero-bg.mp4" type="video/mp4">
+      </video>
     </div>
     <!-- header section strats -->
     <header class="header_section" id="home">
@@ -69,16 +71,16 @@
               <li class="nav-item">
                 <a class="nav-link" href="#login">Login</a>
               </li>
-            <div class="user_option">
-              <form class="form-inline">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
-                </button>
-              </form>
-              <a href="https://wa.me/qr/ZBNSBKO6MKM7E1" class="order_online">
-                <img src="images/wa.png" alt="WhatsApp Icon" width="18" height="18">
-                Whatsapp Us
-              </a>
-            </div>
+              <div class="user_option">
+                <form class="form-inline">
+                  <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
+                  </button>
+                </form>
+                <a href="https://wa.me/qr/ZBNSBKO6MKM7E1" class="order_online">
+                  <img src="images/wa.png" alt="WhatsApp Icon" width="18" height="18">
+                  Whatsapp Us
+                </a>
+              </div>
           </div>
         </nav>
       </div>
@@ -190,9 +192,10 @@
                 <h6>
                   Get<span> 10 Point</span>
                 </h6>
-                <a href ="#login" id="open-form-button">Barter Now<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029"
-                    style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
+                <a href="#login" id="open-form-button">Barter Now<svg version="1.1" id="Capa_1"
+                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;"
+                    xml:space="preserve">
                     <g>
                       <g>
                         <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248
@@ -229,9 +232,10 @@
                 <h6>
                   Get<span> 7 Point </span>
                 </h6>
-                <a href ="#login" id="open-form-button">Barter Now<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029"
-                    style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
+                <a href="#login" id="open-form-button">Barter Now<svg version="1.1" id="Capa_1"
+                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;"
+                    xml:space="preserve">
                     <g>
                       <g>
                         <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248
@@ -556,8 +560,8 @@
           </div>
         </div>
         <div class="col-md-6">
-          <div class="map_container ">
-            <img src="images/akun.png" alt="">
+          <div class="map_container">
+            <img src="images/akun.png" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -638,22 +642,22 @@
               Contact Us
             </h4>
             <div class="contact_link_box">
-              <a href="">
+              <a href="https://maps.app.goo.gl/PZKYYqb7XodU4Kwv5" target="_blank" rel="noopener noreferrer">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
                   Surabaya
                 </span>
               </a>
-              <a href="">
+              <a href="https://wa.me/qr/ZBNSBKO6MKM7E1" target="_blank" rel="noopener noreferrer">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +08 1234567890
+                  Call 0859106507285
                 </span>
               </a>
-              <a href="">
+              <a href="mailto:reihanrachmashafira@gmail.com" target="_blank" rel="noopener noreferrer">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  22082010218@student.upnjatim.ac.id
+                  reihanrachmashafira@gmail.com
                 </span>
               </a>
             </div>
@@ -665,17 +669,16 @@
               Barter.in
             </a>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua.
+              Jangan biarkan barang bekas menumpuk di rumah atau kantor Anda. Hubungi kami sekarang untuk mendapatkan penawaran terbaik! Kami siap membantu menjemput barang Anda dan memberikan pelayanan terbaik demi kepuasan Anda.
             </p>
             <div class="footer_social">
-              <a href="">
+              <a href="mailto:reihanrachmashafira@gmail.com" target="_blank" rel="noopener noreferrer">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
               </a>
-              <a href="www.linkedin.com/in/reihan-rachma-1868861b8">
+              <a href="https://www.linkedin.com/in/reihan-rachma-shafira-1868861b8" target="_blank" rel="noopener noreferrer">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>
-              <a href="https://www.instagram.com/miloanged?igsh=d2ZveXRrM2xyd3E3">
+              </a>              
+              <a href="https://www.instagram.com/rrsfira31?igsh=MW9kNDlwejVxY3ZmaA==" target="_blank" rel="noopener noreferrer">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </div>
@@ -697,7 +700,7 @@
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved<br>
           &copy; <span id="displayYear"></span> Distributed By
-          <a href="https://www.instagram.com/miloanged?igsh=d2ZveXRrM2xyd3E3" target="_blank">ABETEAM</a>
+          <a href="https://www.instagram.com/rrsfira31?igsh=MW9kNDlwejVxY3ZmaA==" target="_blank">Shafira</a>
         </p>
       </div>
     </div>
